--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <div class="top">
                 <p>My balance</p>
                 <h2 class="balance">$921.48</h2>
-                <img src="/images/logo.svg" alt="">
+                <img src="images/logo.svg" alt="">
             </div>
             <div class="bottom">
                 <h2>Spending - Last 7 days</h2>
